--- a/style.css
+++ b/style.css
@@ -11,7 +11,7 @@ div {
   align-items: end;
   justify-content: center;
   width: 100vw;
-  font-size: 30vw;
+  font-size: 15vh;
   align-self: stretch;
 }
 
@@ -34,6 +34,7 @@ button:active {
 
 .add {
   background-color: darkgreen;
+  height: 25vh;
 }
 
 .remove {
